--- a/Learning_Journal_Carina/src/main/resources/styles.css
+++ b/Learning_Journal_Carina/src/main/resources/styles.css
@@ -10,6 +10,7 @@
             background-color: #f5f7fa;
             color: #333;
             line-height: 1.6;
+
         }
 
         header {
@@ -23,9 +24,13 @@
         }
 
         .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             width: 90%;
             max-width: 1200px;
             margin: 0 auto;
+
         }
 
         .nav-container {
@@ -43,6 +48,7 @@
         nav ul {
             display: flex;
             list-style: none;
+            align-items: center;
         }
 
         nav ul li {
@@ -56,6 +62,23 @@
             padding: 0.5rem 1rem;
             border-radius: 4px;
             transition: background-color 0.3s ease;
+        }
+
+        nav ul li .logout-btn {
+            color: white;
+            background: none;
+            border: none;
+            font-size: 1rem;
+            font-weight: 500;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
+            cursor: pointer;
+        }
+
+        nav ul li button:hover {
+            background-color: rgba(255, 255, 255, 0.2);
         }
 
         nav ul li a:hover {
@@ -122,7 +145,16 @@
             background-color: white;
             padding: 2rem;
             border-radius: 8px;
-            box-shadow: 3px 20px 20px rgba(0, 0, 0, 0.05);
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+            margin-bottom: 2rem;
+        }
+
+        .profile-form {
+            width: 50%;
+            background-color: white;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
             margin-bottom: 2rem;
         }
 
@@ -130,6 +162,10 @@
             margin: 1.5rem 1.5rem 1.5rem 1.5rem;
             display: flex;
             justify-content: space-between;
+        }
+
+        .edit-input {
+            width: 60%;
         }
 
         .form-title {
@@ -158,6 +194,44 @@
             transition: border-color 0.3s ease;
         }
 
+        .login-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 750px;
+            margin: 0 auto;
+        }
+
+        .login-form {
+            width: 50%;
+            background-color: white;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+            margin-bottom: 2rem;
+        }
+
+        .login-group {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 1.5rem;
+        }
+
+        .login-group label {
+            display: block;
+            margin-bottom: 0.5rem;
+            font-weight: bold;
+            color: #525c6e;
+        }
+
+        .login-control {
+            padding: 0.75rem;
+            border: 1px solid #e2e8f0;
+            border-radius: 8px;
+            font-size: 1rem;
+            transition: border-color 0.3s ease;
+        }
+
         .form-control:focus {
             outline: none;
             border-color: #505863;
@@ -167,6 +241,46 @@
         textarea.form-control {
             min-height: 200px;
             resize: vertical;
+        }
+
+        .reg-container {
+            width: 90%;
+            max-width: 500px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        .reg-group {
+            margin-bottom: 1.5rem;
+            text-align: left;
+        }
+
+        .reg-group label {
+            display: block;
+            font-weight: bold;
+            color: #525c6e;
+            margin-bottom: 0.5rem;
+        }
+
+        .reg-form {
+            background-color: white;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .reg-control {
+            width: 100%;
+            padding: 0.75rem;
+            border: 1px solid #e2e8f0;
+            border-radius: 8px;
+            font-size: 1rem;
+            transition: border-color 0.3s ease;
+        }
+
+        .reg-control:focus {
+            border-color: #4299e1;
+            outline: none;
         }
 
         .btn {
@@ -189,6 +303,22 @@
         .hidden {
             display: none;
         }
+
+        .register-link {
+        font-size: 0.8rem;
+            text-align: center;
+            margin-top: 2rem;
+        }
+
+        .register-link a {
+            color: #4299e1;
+            text-decoration: none;
+        }
+
+        .register-link a:hover {
+            text-decoration: underline;
+        }
+
 
         footer {
             background-color: var(--main-bg-color);
