--- a/Learning_Journal_Carina/src/main/resources/templates/registration.html
+++ b/Learning_Journal_Carina/src/main/resources/templates/registration.html
@@ -14,25 +14,37 @@
                 <ul>
                     <li><a th:href="@{/entries}">Learning Journal</a></li>
                     <li><a href="#">Lightning Topics</a></li>
-                    <li><a href="#">Profil</a></li>
-                    <li><a href="#" class="active">Login</a></li>
+                    <li><a th:href="@{/profile}">Profil</a></li>
+                    <li><a th:href="@{/login}">Login</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
+        <div class="reg-container">
         <h1 class="page-title">Registrierung</h1>
-        <section class="entry-form">
-        <form method="post" action="/">
+        <section class="reg-form">
+        <form method="post" action="/addPerson">
             <h2 class="form-title">Neuen Benutzer registrieren:</h2>
-            <p>Vorname: <input type="text" name="vorname" class="form-control"></p>
-            <p>Nachname: <input type="text" name="nachname" id="nachname" class="form-control"></p>
-            <p>E-Mail: <input type="text" name="email" id="email" class="form-control"></p>
-            <p>Benutzername: <input type="text" name="username" id="username" class="form-control"></p>
-            <p>Passwort: <input type="password" name="password" id="password" class="form-control"></p>
-            <button type="submit" class="btn">💾</button>
+            <div class = "reg-group">
+                <label for="vorname">Vorname:</label>
+                <input type="text" id="vorname" name="vorname" class="reg-control"></div>
+            <div class = "reg-group">
+                <label for="nachname">Nachname:</label>
+                <input type="text" name="nachname" id="nachname" class="reg-control"></div>
+            <div class = "reg-group">
+                <label for="email">E-Mail:</label>
+                <input type="text" name="email" id="email" class="form-control"></div>
+            <div class = "reg-group">
+                <label for="username">Benutzername:</label>
+                <input type="text" name="username" id="username" class="reg-control"></div>
+            <div class = "reg-group">
+                <label for="password">Passwort:</label>
+                <input type="password" name="password" id="password" class="reg-control"></div>
+            <button type="submit" class="btn">Speichern</button>
         </form>
         </section>
+        </div>
     </main>
     <footer>
         <div class="container footer-content">
